test/1.4/errors/T_EMETH.dml
/*
  © 2021-2024 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.4;

device test;

typedef uint32 int_alias_t;

template t {
    inline method inline_args(inline x, int y) default {}
    method throwing() throws default {}
    method int_args(uint32 a, int_alias_t b) default {}
    method int_return() -> (int) default { return 0; }
    method int_return_2() -> (int_alias_t, uint32) default { return 0; }
}

is t;
/// ERROR EMETH
inline method inline_args(int x, inline y) {}

/// ERROR EMETH
method throwing() {}

method int_args(
/// ERROR EMETH
    char a,
    int_alias_t b) default {}
/// ERROR EMETH
method int_return() -> (char) default { return 0; }
method int_return_2() -> (int_alias_t,
                          /// ERROR EMETH
                          char)
    default { return 0; }

port p is t {
    // no error
    method int_args(int_alias_t a, uint32 b) {}
    method int_return_2() -> (uint32, int_alias_t) {}
}
